authenticator/authenticator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authenticator
  template:
    metadata:
      labels:
        app: authenticator
    spec:
      containers:
        - name: authenticator
          image: tramak/authenticator:latest
          ports:
            - containerPort: 8080
              name: authenticator
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          volumeMounts:
            - name: shop-service-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
      - name: shop-service-persistent-storage
        persistentVolumeClaim:
          claimName: shop-service-pv-claim
