authenticator/authenticator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authenticator-service
spec:
  selector:
    app: authenticator
  type: NodePort  
  ports:
    - port: 8080
      targetPort: 8080
