authenticator/authenticator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authenticator-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /login
          pathType: Prefix
          backend:
            service: 
              name: authenticator
              port: 
                number: 8080
        - path: /signin
          pathType: Prefix
          backend:
            service: 
              name: authenticator
              port: 
                number: 8080
        - path: /logout
          pathType: Prefix
          backend:
            service: 
              name: authenticator
              port: 
                number: 8080
        - path: /register
          pathType: Prefix
          backend:
            service: 
              name: authenticator
              port: 
                number: 8080
        - path: /auth
          pathType: Prefix
          backend:
            service: 
              name: authenticator
              port: 
                number: 8080
        - path: /sessions
          pathType: Prefix
          backend:
            service: 
              name: authenticator
              port: 
                number: 8080
